Correctly position mobile controller

--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@ body {
 	margin: 0;
 	overflow: hidden;
 	position: absolute;
-	min-height: 600px;
+	min-height: 300px;
 	-webkit-user-select: none;
 	/* Safari */
 	-moz-user-select: none;
@@ -86,7 +86,7 @@ canvas {
 	z-index: var(--menu-z-index);
 	width: 30vw;
 	height: 50vh;
-	min-height: 300px;
+	min-height: 280px;
 	min-width: 300px;
 	margin: auto;
 	display: flow-root;
@@ -237,7 +237,7 @@ canvas {
 
 .mobile-controller {
 	width: calc(100% - 200px);
-	height: 100%;
+	height: 50%;
 	padding-left: 100px;
 	padding-right: 100px;
 	z-index: var(--mobile-controler-z-index);
@@ -246,6 +246,8 @@ canvas {
 	align-items: center;
 	justify-content: space-between;
 	opacity: 0.2;
+	position: absolute;
+	bottom: 0px;
 }
 
 .directional-pad {
@@ -445,7 +447,6 @@ canvas {
 		font-size: 50px;
 		line-height: 100px;
 	}
-	.button-container::after {
-		font-size: 30px;
-	}
 }
+
+/* #endregion */
